k8s_common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minishop-ingress
  namespace: minishop
spec:
  ingressClassName: nginx
  rules:
  - host: athulraj.co.in
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: apigateway
              port:
                number: 8000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front-end
              port:
                number: 3000
